Room Allocation Started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div id="container">
-<app-sidebar></app-sidebar>
-<div id="content">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-</div>
+  <app-sidebar></app-sidebar>
+  <div id="content">
+    <!-- <app-header></app-header> -->
+    <div style="padding-left: 20px;">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
