--- a/src/app/room-management/room-management.component.html
+++ b/src/app/room-management/room-management.component.html
@@ -9,63 +9,75 @@
   </tr>
 </table>
 <form [formGroup]="createRoomForm" (ngSubmit)="createRoom()">
-<table id="createRoom" class="table table-bordered table-striped" style="width: 45%;display: none;">
-  <thead>
-    <tr>
-      <th>Kind of Property</th> <th>Specification</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Type Of Room</th>
-      <td>
-          <select formControlName="typeOfRoom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.typeOfRoom.errors }">
-              <option value="">--Select--</option>              
-              <option value="AC">Air Conditioned</option>
-              <option value="nonAC">Non AirConditioned</option>
-            </select>            
-      </td>
-    </tr>
-    <tr>
-      <th>Model Of Room</th>
-      <td>
-          <select formControlName="modelOfRoom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.modelOfRoom.errors }">
-              <option value="">--Select--</option>              
-              <option value="deluxe">Deluxe</option>
-              <option value="suite">Suite</option>
-            </select>
-      </td>
-    </tr>
-    <tr>
-      <th>Category Of Room</th>
-      <td><select formControlName="categoryOfRoom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.categoryOfRoom.errors }">
-          <option value="">--Select--</option>              
-          <option value="single">Single</option>
-          <option value="double">Double</option>
-        </select>
-      </td>
-    </tr>
-    <tr>
-      <th>Floor</th>
-      <td><select formControlName="floorNumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.floorNumber.errors }">
-          <option value="">--Select--</option>              
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>          
-        </select>
-      </td>
-    </tr>    
-    <tr>
+  <table id="createRoom" class="table table-bordered table-striped" style="width: 45%;display: none;">
+    <thead>
+      <tr>
+        <th>Attribute</th>
+        <th>Specification</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>Type Of Room</th>
+        <td>
+          <select formControlName="typeOfRoom" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.typeOfRoom.errors }">
+            <option value="">--Select--</option>
+            <option value="AC">Air Conditioned</option>
+            <option value="nonAC">Non AirConditioned</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th>Model Of Room</th>
+        <td>
+          <select formControlName="modelOfRoom" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.modelOfRoom.errors }">
+            <option value="">--Select--</option>
+            <option value="deluxe">Deluxe</option>
+            <option value="suite">Suite</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th>Category Of Room</th>
+        <td><select formControlName="categoryOfRoom" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.categoryOfRoom.errors }">
+            <option value="">--Select--</option>
+            <option value="SNG">Single</option>
+            <option value="DBL">Double</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th>Floor</th>
+        <td><select formControlName="floorNumber" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.floorNumber.errors }">
+            <option value="">--Select--</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select>
+        </td>
+      </tr>
+      <tr *ngIf="createRoomMultipleFlag">
+        <th>Count of Rooms</th>
+        <td>
+          <input type="text" formControlName="countOfRooms" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.countOfRooms.errors }" id="countOfRooms"
+            placeholder="Count Of Rooms" style="width: 100%;" value="1">
+        </td>
+      </tr>
+      <tr>
         <td><input type="submit" class="btn-primary" value="Submit"></td>
         <td><input type="reset" class="btn-primary" value="Reset"></td>
-    </tr>
-  </tbody>
-</table>
+      </tr>
+    </tbody>
+  </table>
 </form>
-
 <table class="table table-bordered">
-  <tr>      
+  <tr>
     <td *ngFor="let room of roomsList" class="{{{'free':'success', 'booked':'error'}[room.roomStatus]}}">
       
       {{room.roomNumber}}
