--- a/src/app/room-allocate/room-allocate.component.html
+++ b/src/app/room-allocate/room-allocate.component.html
@@ -37,7 +37,7 @@
 </div>
 
 <div *ngIf="roomList.length">
-  <table class="table table-bordered">
+  <table class="table table-bordered" style="width: 85%; background-color:tan">
     <thead>
       <tr>
         <th>Room Number</th>
