--- a/src/app/emp-home/emp-home.component.html
+++ b/src/app/emp-home/emp-home.component.html
@@ -43,3 +43,23 @@
     </tr>
   </table>
 </div>
+
+<div *ngIf="requestList.length>0">
+  <table class="table table-bordered table-striped" style="width: 45%; background:teal">
+    <thead>
+      <tr>
+        <th>Request Date</th>
+        <th>Request Type</th>
+        <th>Request ID</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let request of requestList">
+        <td>{{request.requestDate === null ? "" : request.requestDate| date:'dd MMM, yyyy'}}</td>
+        <td>{{request.typeOfRequest}}</td>
+        <td>{{request.requestId === 0 ? "" : request.requestId}} {{request.billAmount === 0 ? "" : request.billAmount}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
