--- a/src/app/adm-home/adm-home.component.html
+++ b/src/app/adm-home/adm-home.component.html
@@ -4,7 +4,7 @@
     <tr>
       <td><a class="btn btn-success" routerLink="/admWelcome/roomAllocate">Room Allocate</a></td>
       <td><a class="btn btn-success" routerLink="/admWelcome/employeeManagement">Manage Employees</a></td>
-      <td><a class="btn btn-success" routerLink="/admWelcome/service">Manage Services</a></td>
+      <td><a class="btn btn-success" routerLink="/admWelcome/amenity">Manage Amenities</a></td>
       <td><a class="btn btn-success" routerLink="/admWelcome/tourPackage">Manage Tour Packages</a></td>
       <td><a class="btn btn-success" routerLink="/admWelcome/roomManagement">Manage Rooms</a></td>
     </tr>
