--- a/src/app/adm-home/tour-management/tour-management.component.html
+++ b/src/app/adm-home/tour-management/tour-management.component.html
@@ -1,1 +1,89 @@
-<p>tour-management works!</p>
+<button class="btn-primary" (click)="viewPackageList()">List Tour Packages</button> &nbsp;&nbsp;&nbsp;&nbsp;
+<button class="btn-primary" (click)="newTourPackage()">New Tour Packages</button>
+<br>
+<br>
+<div *ngIf="!newPackage && viewPackages" class="center">
+    <table class="table table-striped table-bordered" style="width: 70%; background:#ff54">
+        <thead>
+            <tr>
+                <th>Package Id</th>
+                <th>Package Name</th>
+                <th>Location</th>
+                <th>Duration</th>
+                <th>Price Per Head</th>
+                <th>Deleted</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let tourPackage of tourPackagesList">
+                <td>{{tourPackage.tourPackageId}}</td>
+                <td>{{tourPackage.tourPackageName}}</td>
+                <td>{{tourPackage.location}}</td>
+                <td>{{tourPackage.duration}}</td>
+                <td>
+                    <input type="number" min="2500" name="pricePerHead" id="pricePerHead{{tourPackage.tourPackageName}}"
+                        value={{tourPackage.pricePerHead}}>
+                </td>
+                <td>
+                    <button class="btn-primary" (click)="toggleDelete(tourPackage.tourPackageName)">
+                        <div *ngIf="tourPackage.deleted != 'Y'">Delete</div>
+                        <div *ngIf="tourPackage.deleted === 'Y'">Undelete</div>
+                    </button>
+                </td>
+                <td><button class="btn-primary" (click)="updatePrice(tourPackage.tourPackageName)">
+                        Update Price</button></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div *ngIf="newPackage && !viewPackages" class="center">
+    <form [formGroup]="tourPackageForm" (ngSubmit)="createTourPackage()">
+        <table class="table table-striped table-hover" style="width: 25rem;">
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="text" formControlName="location" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.location.errors }" name="location" id="location"
+                            placeholder="Location of the Tour" style="width: 100%;">
+                        <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
+                            <div *ngIf="f.location.errors.required">Location is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="text" formControlName="pricePerHead" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.pricePerHead.errors }" name="pricePerHead"
+                            id="pricePerHead" placeholder="Price Per Head" style="width: 100%;">
+                        <div *ngIf="submitted && f.pricePerHead.errors" class="invalid-feedback">
+                            <div *ngIf="f.pricePerHead.errors.required">Price Per Head is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="form-group">
+                        <select formControlName="duration" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f.duration.errors }">
+                            <option value="">Duration</option>
+                            <option value="2D3N">Short</option>
+                            <option value="4D5N">Medium</option>
+                            <option value="6D7N">Long</option>
+                        </select>
+                        <div *ngIf="submitted && f.duration.errors" class="invalid-feedback">
+                            <div *ngIf="f.duration.errors.required">Please select duration of Package</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td><input type="submit" class="btn-primary" value="Create Tour Package"></td>
+                <td><input type="reset" class="btn-primary" value="Reset"></td>
+            </tr>
+        </table>
+    </form>
+</div>
