Lookup Excel Upload Complete

--- a/src/app/adm-home/adm-home.component.html
+++ b/src/app/adm-home/adm-home.component.html
@@ -7,6 +7,7 @@
       <td><a class="btn btn-success" routerLink="/admWelcome/amenity">Manage Amenities</a></td>
       <td><a class="btn btn-success" routerLink="/admWelcome/tourPackage">Manage Tour Packages</a></td>
       <td><a class="btn btn-success" routerLink="/admWelcome/roomManagement">Manage Rooms</a></td>
+      <td><a class="btn btn-success" routerLink="/admWelcome/lookupManagement">Manage Lookups</a></td>
     </tr>
   </table>
   <router-outlet></router-outlet>
