--- a/src/app/cust-home/tour-booking/tour-booking.component.html
+++ b/src/app/cust-home/tour-booking/tour-booking.component.html
@@ -6,7 +6,7 @@
             <th>Duration</th>
             <th>Price Per Head</th>
             <th>No Of Tourists</th>
-            <th>Action</th>
+            <th>Travel Date</th>
         </tr>
     </thead>
     <tbody>
