--- a/src/app/room-allocate/room-allocate.component.html
+++ b/src/app/room-allocate/room-allocate.component.html
@@ -28,8 +28,8 @@
       <td>{{roomRequest.roomCount}}</td>
       <td>{{roomRequest.guestCount}}</td>
       <td>{{roomRequest.guestGen}}</td>
-      <td>{{roomRequest.modelOfRooms}}</td>
-      <td>{{roomRequest.typeOfRooms}}</td>
+      <td>{{roomRequest.roomModel}}</td>
+      <td>{{roomRequest.roomType}}</td>
       <td><input type="submit" class="btn-primary" (click)="viewFeasibleRooms(roomRequest.requestId)"
           value="View Feasible Rooms"></td>
     </tr>
