--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -9,6 +9,40 @@
 </div>
 <br>
 <br>
+<p-table [value]="lookupList">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Lookup Definition Name</th>
+            <th>Lookup Value</th>
+            <th>Lookup Display Name</th>
+            <th>Created Date</th>
+            <th>Update Date</th>
+            <th>Deletion</th>
+            <th>Update</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-lookup>
+        <tr>
+            <td>{{lookup.lookupDefName}}</td>
+            <td>{{lookup.lookupValue}}</td>
+            <td>{{lookup.displayName}}</td>
+            <td>{{lookup.createdDate === null ? "" : lookup.createdDate| date:'dd MMM, yyyy'}}</td>
+            <td>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd MMM, yyyy'}}</td>
+            <td>
+                <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
+                    <div *ngIf="lookup.deleted != 'Y'">Delete</div>
+                    <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
+                </button>
+
+            </td>
+            <td>
+                <button class="btn-primary" (click)="updateRecord(lookup.lookupId)">Update</button>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+
+
 <table *ngIf="viewAll && !createNew" class="table table-bordered table-striped"
     style="width: 75%; background:lightblue">
     <thead>
