--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -12,7 +12,7 @@ Hey {{custName}}!!! What would you like to do now? <br>
 
 
 <div *ngIf="viewProf">
-  <table class="table table-bordered table-striped" style="width: 45%">
+  <table class="table table-bordered" style="width: 45%; background:thistle;">
     <tr>
       <th>Name</th>
       <td>{{customer.custName}}</td>
@@ -83,7 +83,7 @@ Hey {{custName}}!!! What would you like to do now? <br>
     </tbody>
   </table>
 </div>
-<div *ngIf="viewLoyaltyPoints">
+<div *ngIf="viewRewards">
 
   <table class="table table-bordered" style="width: 85%; background:thistle;">
     <thead>
@@ -95,11 +95,18 @@ Hey {{custName}}!!! What would you like to do now? <br>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let rewardPoints of rewardPointList">
-        <td>{{rewardPoints.pointsTransactionName}}</td>
-        <td>{{rewardPoints.pointsEarned}}</td>
+      <tr *ngFor="let rewardPoints of rewardPointList; last as isLast">
+        <td>
+          <span *ngIf="isLast" style="font-weight:bold">{{rewardPoints.pointsTransactionName}}</span>
+          <span *ngIf="!isLast">{{rewardPoints.pointsTransactionName}}</span>
+        </td>
+
+        <td><span *ngIf="isLast" style="font-weight:bold">{{rewardPoints.pointsEarned}}</span>
+          <span *ngIf="!isLast">{{rewardPoints.pointsEarned}}</span>
+        </td>
         <td>{{rewardPoints.pointsEarnedDate === null ? "" : rewardPoints.pointsEarnedDate| date:'dd MMM, yyyy'}}</td>
         <td>{{rewardPoints.pointsExpiryDate === null ? "" : rewardPoints.pointsExpiryDate| date:'dd MMM, yyyy'}}</td>
+
       </tr>
     </tbody>
   </table>
